# swash

./: .gitignore  README.md  flake.nix  meson.build
.github/workflows/: create-release.yml  publish-aur.yml
data/: dev.lemmy.swash.desktop  meson.build  swash.gresource.xml
data/icons/: README.md
data/ui/: style.css  window.ui
nix/: package.nix
src/: canvas-input.c  canvas-layout.c  canvas-render.c  canvas-state.c  document.c  document.h  editor-utils.c  editor-utils.h  export.c  export.h  main.c  meson.build  ocr.c  ocr.h  render.c  render.h  stroke.c  stroke.h  swash-config.h.in  swash.gresource.xml  test-editor-utils.c  types.h  waytator-canvas-input.c  waytator-canvas-render.c  waytator-canvas-state.c  waytator-document.c  waytator-document.h  waytator-export.c  waytator-export.h  waytator-render.c  waytator-render.h  waytator-stroke.c  waytator-stroke.h  waytator-types.h  waytator-window-private.h  waytator-window.c  waytator.gresource.xml  window-private.h  window.c  window.h
src/ui/: window.ui
src/ui/icons/: index.theme
